# TinderApi

./: LICENSE  README.md  pyproject.toml
TinderApi/: __init__.py  browser.py  captcha.py  debugger.py  exceptions.py  session.py  tinder.py  utils.py
TinderApi/api/: account.py  matches.py  media.py  misc.py  swipe.py  user.py
TinderApi/data/: sexual_orientation.json
TinderApi/examples/: register.py  send_message.py  swipe.py
TinderApi/protos/: authgateway.py  create_placeholder_request.py  create_placeholder_response_model.py  media.py  media_responses.py  order_media_request.py  order_media_response_model.py
tests/: browser_view.py  login.py  swipe.py
